<resources>
    <string name="app_name">ESP Project</string>
    <string name="species_item_imageview_placeholder_description">Placeholder description</string>
    <string name="menu_search_title">Search</string>
    <string name="species_list_query_hint">Search for specific name</string>
    <string name="animals">Animals</string>
    <string name="insects">Insects</string>
    <string name="plants">Plants</string>
    <string name="countries_prompt">Country</string>
    <string name="category_prompt">Category</string>
    <string name="contact_prompt">Contact</string>
    <string name="it">Italy</string>
    <string name="in">India</string>
    <string name="s_africa">South Africa</string>
    <string name="image_details_animal_content_descriptor">Immagine per il dettaglio</string>
    <string name="menu_details_title">Details</string>
    <string name="menu_details_button_name">GPS</string>
    <string name="images_load_error">There was an error loading the images. Try downloading the resources again</string>
    <string name="details_name">COMMON NAME</string>
    <string name="details_species">SPECIES NAME</string>
    <string name="details_diet">DIET</string>
    <string name="details_symptoms">SYMPTOMS</string>
    <string name="details_symptom_bite">BITE</string>
    <string name="details_symptom_contact">CONTACT</string>
    <string name="details_symptom_ingested">INGESTED</string>
    <string name="details_symptom_stung">STUNG</string>
    <string name="details_symptom_inhalation">INHALATION</string>
    <string name="details_toolbar_title">Details</string>
    <string name="species_list_toolbar_title">List of species</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="contact_bite">Bite</string>
    <string name="contact_stung">Stung</string>
    <string name="contact_eaten">Eaten</string>
    <string name="contact_contact">Skin contact</string>
    <string name="select_the_country">Country</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="settings">Settings</string>
    <string name="symptoms_search_query_hint">Search for specific symptoms</string>
    <string name="symptoms_search_toolbar_title">Symptoms search</string>
    <string name="change_language">Select the language</string>
    <string name="ask_permission">This app requires you to download some extra resources in order for it to work. You may also want to allow access to the device\'s location to use all of the functionalities. This app will never keep track of your position and does not require a GPS signal to function.</string>
    <string name="permissions_not_granted">Permission not granted</string>
    <string name="select_the_language">Language</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="download_dialog_message">Please select a country and image quality to download corresponding resources.</string>
    <string name="change_image_quality">Change image quality</string>
    <string name="select_image_quality">Image quality</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="update_location">Grant location permissions</string>
    <string name="remove_cache">Delete all resources</string>
    <string name="connection_alert_dialog_message">It seems you are currently using a metered connection. Before downloading more resources, we suggest you connect to a non-metered connection such as a WI-FI network. If you wish to continue anyway then press OK.</string>
    <string name="resources_deleted_message">Deleted all resources.</string>
    <string name="download_new_resources">Download new resources</string>
    <string name="not_enough_space">There is not enough space for new reources.</string>
    <string name="notification_download_message">"Downloading resources for: "</string>
    <string name="unexpected_error">Unexpected error.</string>
    <string name="selectedLowQ">Selected low image quality</string>
    <string name="selectedMediumQ">Selected medium image quality</string>
    <string name="selectedHighQ">Selected high image quality</string>
    <string name="download_new_resource">Download a new resource</string>

    <string-array name="settings_languages">
        <item>Italiano</item>
        <item>English</item>
    </string-array>

    <string-array name="settings_quality">
        <item>@string/low</item>
        <item>@string/medium</item>
        <item>@string/high</item>
    </string-array>
    <string name="symptoms_abdominal_cramps">Abdominal cramps</string>
    <string name="symptoms_ptosis">Ptosis</string>
    <string name="symptoms_vomiting">Vomiting</string>
    <string name="symptoms_diarrhea">Diarrhea</string>
    <string name="symptoms_dizziness">Dizziness</string>
    <string name="symptoms_allergic_reaction">Allergic reaction</string>
    <string name="symptoms_pain_at_bite_site">Pain in the bite area</string>
    <string name="symptoms_swelling">Swelling</string>
    <string name="symptoms_local_burning">Localized burning sensation</string>
    <string name="symptoms_urticaria">Urticaria</string>
    <string name="symptoms_inflammation">Inflammation</string>
    <string name="symptoms_redness">Redness</string>
    <string name="symptoms_vesication">Vesication</string>
    <string name="symptoms_tetanic_convulsion">Tetanic convulsion</string>
    <string name="symptoms_headache">Headache</string>
    <string name="symptoms_convulsions">Convulsions</string>
    <string name="symptoms_endema">Endema</string>
    <string name="symptoms_discoloration">Discoloration</string>
    <string name="symptoms_acute_pain">Acute pain</string>
    <string name="symptoms_soreness">Soreness</string>
    <string name="symptoms_ulcer">Ulcers</string>
    <string name="symptoms_pain">Pain</string>
    <string name="symptoms_muscular_paralysis">Muscular paralysis</string>
    <string name="symptoms_chocking">Chocking sensation</string>
    <string name="symptoms_necrosis">Necrosis</string>
    <string name="symptoms_sleepiness">Sleepiness</string>
    <string name="symptoms_itchiness">Itchiness</string>
    <string name="symptoms_irritation">Irritation</string>
    <string name="symptoms_hallucinations">Hallucinations</string>
    <string name="change_image_quality_button_text">CHANGE IMAGE QUALITY</string>
    <string name="reset_selections">Reset selections</string>
    <string name="search_by_symptoms">Search by symptoms</string>
    <string name="error_database_not_found">Could not open database. Try downloading resources again.</string>
    <string name="title_activity_map">Map</string>
    <string name="your_position">Your Position</string>
    <string name="symptoms_placeholder">%1$s: %2$s</string>

</resources>
