<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_country"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/countries_spinner_layout"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCountry"
        android:background="@drawable/spinner_layout_background">

        <Spinner
            android:id="@+id/countries_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCountry"
            android:prompt="@string/countries_prompt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/animals_button"
        android:onClick="onClickCategory"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countries_spinner_layout"
        app:layout_constraintBottom_toTopOf="@id/insects_button"
        android:background="@drawable/animals_button_ripple"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_animals_480"
            android:layout_weight="1"
            android:contentDescription="@string/animals" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/animals"
            style="@style/main_activity_button_text"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insects_button"
        android:onClick="onClickCategory"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/animals_button"
        app:layout_constraintBottom_toTopOf="@id/plants_button"
        android:background="@drawable/insects_button_ripple"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insect_480"
            android:layout_weight="1"
            android:contentDescription="@string/insects" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/insects"
            style="@style/main_activity_button_text"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/plants_button"
        android:onClick="onClickCategory"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/insects_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/plants_button_ripple"
        android:weightSum="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plants_480"
            android:layout_weight="1"
            android:contentDescription="@string/plants" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/plants"
            style="@style/main_activity_button_text"
            android:layout_weight="4"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>