<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rem.progetto_embedded.Activities.SettingsActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/change_language" />
    <Spinner
        android:id="@+id/settings_spinner_languages"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/change_image_quality" />
        <Spinner
            android:id="@+id/settings_spinner_images_quality"
            android:layout_marginTop="5dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/new_resource_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_new_resource"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_settings"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_file_download_white_34dp"
            android:drawablePadding="2dip"
            android:paddingLeft="20dp"
            android:paddingRight="35dp"/>

        <Button
            android:id="@+id/update_position_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_location"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/buttons_settings"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_my_location_white_34dp"
            android:drawablePadding="2dip"
            android:paddingLeft="20dp"
            android:paddingRight="35dp"/>

        <Button
            android:onClick="onClickDeleteCache"
            android:id="@+id/cache_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_cache"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_settings"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_delete_white_34dp"
            android:drawablePadding="2dip"
            android:paddingLeft="20dp"
            android:paddingRight="35dp"/>

        <Button
            android:onClick="onClickDownloadResources"
            android:id="@+id/download_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_new_resources"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_settings"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>





</LinearLayout>