<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_dialog_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/select_the_country"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/countries_spinner_layout"/>

    <LinearLayout
        android:id="@+id/countries_spinner_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_layout_background"
        app:layout_constraintTop_toBottomOf="@id/country_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/countries_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/select_the_language"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/countries_spinner_layout"
        app:layout_constraintStart_toStartOf="@id/languages_spinner_layout"/>

    <LinearLayout
        android:id="@+id/languages_spinner_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/spinner_layout_background"
        app:layout_constraintTop_toBottomOf="@id/language_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/languages_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/image_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/select_image_quality"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/languages_spinner_layout"
        app:layout_constraintStart_toStartOf="@id/image_quality_layout"/>

    <LinearLayout
        android:id="@+id/image_quality_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/spinner_layout_background"
        app:layout_constraintTop_toBottomOf="@id/image_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/image_quality_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_quality_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@android:string/ok"
        android:background="@drawable/dialog_button_ripple_effect_white"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_quality_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@android:string/cancel"
        android:background="@drawable/dialog_button_ripple_effect_white"
        android:stateListAnimator="@null"/>





</androidx.constraintlayout.widget.ConstraintLayout>