<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/countries_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries_prompt"
                app:layout_constraintEnd_toEndOf="@+id/countries_spinner_layout"
                app:layout_constraintStart_toStartOf="@id/countries_spinner_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/countries_spinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/spinner_layout_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/species_spinner_layout"
                app:layout_constraintTop_toBottomOf="@id/countries_prompt">

                <Spinner
                    android:id="@+id/countries_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <TextView
                android:id="@+id/species_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_prompt"
                app:layout_constraintEnd_toEndOf="@+id/species_spinner_layout"
                app:layout_constraintStart_toStartOf="@id/species_spinner_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/species_spinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/spinner_layout_background"
                app:layout_constraintStart_toEndOf="@id/countries_spinner_layout"
                app:layout_constraintEnd_toStartOf="@id/contact_spinner_layout"
                app:layout_constraintTop_toBottomOf="@id/species_prompt">

                <Spinner
                    android:id="@+id/species_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:id="@+id/contact_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_prompt"
                app:layout_constraintEnd_toEndOf="@+id/contact_spinner_layout"
                app:layout_constraintStart_toStartOf="@id/contact_spinner_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/contact_spinner_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/spinner_layout_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/species_spinner_layout"
                app:layout_constraintTop_toBottomOf="@id/contact_prompt">

                <Spinner
                    android:id="@+id/contact_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                style="@style/horizontal_divider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/species_spinner_layout"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_below="@+id/linearLayout"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="gone"
            android:onClick="onFabClicked"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_check_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>